--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    command: npm run dev
+    command: node server.js
     volumes:
       - .:/usr/app/
       - /usr/app/node_modules
