--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,23 @@
 version: '3'
 services:
   web:
-    build: .
+    build: 
+      context: .
+      dockerfile: dockerfile
     command: node server.js
-    volumes:
-      - .:/usr/app/
-      - /usr/app/node_modules
     ports:
-      - "3000:3000"
+      - 7777:7777
+  tests:
+    build: 
+      context: ./testes
+      dockerfile: dockerfile
+    network_mode: host
+    image: robot
+    shm_size: "256M"
+    environment:
+      USERNAME: Justus
+    volumes: [
+      "$PWD/suites:/suites",
+      "$PWD/scripts:/scripts",
+      "$PWD/reports:/reports"
+    ]
