--- a/testes/dockerfile
+++ b/testes/dockerfile
@@ -34,4 +34,4 @@ RUN wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd6
     && mv chromedriver /usr/local/bin \
     && chmod +x /usr/local/bin/chromedriver
 
-CMD ["/scripts/run_suite.sh"]
+CMD ["./scripts/run_suite.sh"]
